index.css
body{
    font-family: sans-serif;
    margin: 0;
    padding: 0;
}
#student-section{
    column-count: 6;
    position: absolute;
    width: calc(100% - 40px);
    max-width: 2640px;
    margin-left: 50%;
    transform: translate(-50%);
}
#student-section img{
    width: calc(100% - 40px) !important;
    height: auto !important;
    margin: 20px 20px 0px 20px;
    border: solid 2px black;
    cursor: pointer;
}
.student-name{
    font-size: 0.75rem;
    text-align: center;
    text-transform: uppercase;
    line-height: 0px;
}

#toast{
    position: fixed;
    right: -420px;
    top: 20px;
    height: 80px;
    background: #ffffff;
    background: -moz-linear-gradient(top, #fafafa 0%, #f7f7f7 99%); /* FF3.6-15 */
    background: -webkit-linear-gradient(top, #fafafa 0%, #f7f7f7 99%); /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(to bottom, #fafafa 0%, #f7f7f7 99%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    border-radius: 8px;
    opacity: 0;
    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
    border: solid 0.25px #EAEAEA;
    padding-right: 100px;
}

#toast-profile-image{
    height: 60px;
    width: 60px;
    border-radius: 100%;
    position: relative;
    margin: 10px;
}
#toast-text{
    vertical-align: top;
    display: inline-block;
    position: relative;
    margin: 14px 10px 0 0;
}
#toast-text h3{
    font-size: 14px;
    line-height: 0px;
}
#toast-text p{
    font-size: 12px;
    line-height: 14px;
}
#toast-drop-image{
    display: inline-block;
    position: relative;
    width: 60px;
    height: 60px;
    object-fit: contain;
    vertical-align: top;
    margin: 10px 10px 0 0;
}
#toast-buttons{
    display: inline-block;
    position: absolute;
    float: right;
    right: 0;
    top: 0;
    border-left: solid 1px #DBD7D7;
    height: 100%;
    vertical-align: top;
    font-weight: 800;
    color: #3A3D3C;
    font-size: 15px;
    cursor: pointer;
}
.toast-button{
    line-height: 40px;
    width:80px;
    padding: 0 10px;
    margin: 0;
    text-align: center;
}
#toast-decline{
    border-bottom: solid 1px #DBD7D7;
}


.transition {
    -webkit-transition: all 600ms cubic-bezier(1, 0, 0, 1);
    transition: all 600ms cubic-bezier(1, 0, 0, 1);
}
.shadow {
    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.5);
}

@media screen and (max-width: 1300px){
    #student-section{
        column-count: 5;
    }
}
@media screen and (max-width: 900px){
    #student-section{
        column-count: 4;
    }
}
@media screen and (max-width: 600px){
    #student-section{
        column-count: 2;
    }
}

